...
          paddingBottom: 16,
          shadowColor: 'transparent',
          shadowOffset: { width: 0, height: 0 },
        }}
        renderHeader={() => (header ? <>{header}</> : <ReviewHeader />)}
      >
        <Tabs.Tab name="Data" label="Data">
          <DataTab />
        </Tabs.Tab>
        <Tabs.Tab name="Hashes" label="Hashes">
          <HashesTab txDetails={txDetails} />
        </Tabs.Tab>
        <Tabs.Tab name="JSON" label="JSON">
          <JSONTab txDetails={txDetails} />
        </Tabs.Tab>
      </Tabs.Container>

      {children}
    </View>
...
