...
  return (
    <Tabs.ScrollView contentContainerStyle={{ padding: 16, marginTop: 8 }}>
      <Container>
        <View gap="$3">
          <View>
            <Text fontSize="$3" color="$colorSecondary">
              Domain hash
            </Text>
            <Text fontSize="$5" color="$color">
              {domainHash ?? '—'}
            </Text>
          </View>
          <View>
            <Text fontSize="$3" color="$colorSecondary">
              Message hash
            </Text>
            <Text fontSize="$5" color="$color">
              {messageHash ?? '—'}
            </Text>
          </View>
          <View>
            <Text fontSize="$3" color="$colorSecondary">
              safeTxHash
            </Text>
            <Text fontSize="$5" color="$color">
              {safeTxHash ?? '—'}
            </Text>
          </View>
        </View>
...
